--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/buttons.css" />
     <link rel="stylesheet" href="css/sections/burger.css" />
     <link rel="stylesheet" href="css/sections/about.css" />
+    <link rel="stylesheet" href="css/sections/resume.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- Script -->
     <script src="script/linksTemplate.js"></script>
@@ -69,7 +70,36 @@
           </div>
         </div>
       </section>
-      <section id="resume">RESUME SECTION</section>
+      <section id="resume">
+        <div class="resume-container">
+          <div class="skill"><h2>HTML</h2></div>
+          <div class="skill"><h2>CSS</h2></div>
+          <div class="skill"><h2>Bootstrap</h2></div>
+          <div class="skill"><h2>Javascript</h2></div>
+          <div class="skill"><h2>Node.js</h2></div>
+          <div class="skill"><h2>Vue.js</h2></div>
+          <div class="skill"><h2>React</h2></div>
+          <div class="skill"><h2>Angular</h2></div>
+          <div class="skill"><h2>Alpine.js</h2></div>
+          <div class="skill"><h2>Python</h2></div>
+          <div class="skill"><h2>Java 8</h2></div>
+          <div class="skill"><h2>Java 17</h2></div>
+          <div class="skill"><h2>Java 21</h2></div>
+          <div class="skill"><h2>Maven</h2></div>
+          <div class="skill"><h2>Springboot</h2></div>
+          <div class="skill"><h2>JWT</h2></div>
+          <div class="skill"><h2>OAuth2</h2></div>
+          <div class="skill"><h2>Docker</h2></div>
+          <div class="skill"><h2>Kubernetes</h2></div>
+          <div class="skill"><h2>WebSocket</h2></div>
+          <div class="skill"><h2>Kafka</h2></div>
+          <div class="skill"><h2>Git</h2></div>
+          <div class="skill"><h2>Source Tree</h2></div>
+          <div class="skill"><h2>MySQL</h2></div>
+          <div class="skill"><h2>PostgreSQL</h2></div>
+          <div class="skill"><h2>MongoDB</h2></div>
+        </div>
+      </section>
       <section id="contact">CONTACT SECTION</section>
     </main>
 
