--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/sections/about.css" />
     <link rel="stylesheet" href="css/sections/resume.css" />
     <link rel="stylesheet" href="css/sections/contact.css" />
+    <link rel="stylesheet" href="css/sections/home.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- Script -->
     <script src="script/linksTemplate.js"></script>
@@ -47,7 +48,18 @@
           <div class="burger-menu-body">BURGEZ</div>
         </div>
       </div>
-      <section id="home" class="active">HOME SECTION</section>
+      <section id="home" class="active">
+        <div class="home-header">
+          <div class="img-container"><img src="img/profile.jpeg" alt="Immagine del profilo" /></div>
+          <div class="name">Tommaso Cavini</div>
+        </div>
+        <div class="home-bottom">
+          <div>
+            Web Development Project for Epicode "Computer Engineering & Artificial Intelligence" Bachelor's. Explore Sections to see different features and
+            media queries
+          </div>
+        </div>
+      </section>
       <section id="about">
         <div class="biography">
           Hi I'm Tommaso, I am working as Software Developer and I am studying at Epicode. Here's the Web Development Project of Computer Engineering and
